--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,7 @@ jobs:
       - run: cd docs/.vuepress/dist
       - run: git init
       - run: git add -A
+      - run: git config --global user.email "372354984@qq.com"
+      - run: git config --global user.name "dealloc"
       - run: git commit -m 'deploy'
       - run: git push -f https://github.com/372354984/dealloc.co.git docs
