--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Build and push
-        run: npm install
+
+      - run: npm install
       - run: npm run docs:build
       - run: cd docs/.vuepress/dist
       - run: git init
